<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_fragment_container"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.filter_fragment_dialog.MainActivityFilterDialogFragment">


        <ImageView
            android:id="@+id/banner"
            android:importantForAccessibility="no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_banner_fragment_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <LinearLayout
            android:id="@+id/room_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:maxHeight="@dimen/filters_layout_max_height"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/time_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner">

            <TextView
                android:id="@+id/room_filter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_filter_label_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/room_filter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filters_recycler_view_height"
                android:layout_marginTop="8dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:maxHeight="@dimen/filters_layout_max_height"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/room_layout"
            app:layout_constraintTop_toBottomOf="@+id/banner">

            <TextView
                android:id="@+id/time_filter_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_filter_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/time_filter"
                app:layout_constraintStart_toStartOf="@+id/time_filter"
                app:layout_constraintTop_toBottomOf="@+id/banner">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/time_filter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/filters_recycler_view_height"
                android:layout_marginTop="8dp">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <TextView
            android:id="@+id/filter_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/room_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeFilterDialogButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:text="@string/filter_close_button_text"
            android:textSize="14sp"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_text">

        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>