<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="@dimen/fields_standard_margin"
        tools:context=".view.add.AddMeetingFragment">

        <ImageView
            android:id="@+id/image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/add_meeting_icon_description"
            android:src="@drawable/add_meeting_img"
            app:layout_constraintBottom_toTopOf="@+id/text_input_subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fields_standard_margin"
            android:hint="@string/meeting_subject_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_subject_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clock_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fields_standard_height"
            android:layout_marginTop="@dimen/fields_standard_margin"
            app:layout_constraintTop_toBottomOf="@+id/text_input_subject">

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fields_standard_margin"
                android:paddingVertical="8dp"
                android:text="@string/start_time_text_prefix"
                android:textSize="@dimen/fields_standard_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/time_picker_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/custom_background_shape"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:textAlignment="center"
                android:textSize="@dimen/fields_standard_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/time_picker_button"
                app:layout_constraintStart_toEndOf="@+id/intro_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/date/hhmm">

            </TextView>

            <ImageButton
                android:id="@+id/time_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/clock_picker_state_icon"
                android:scaleType="center"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:src="@drawable/ic_baseline_access_time_32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_selector"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fields_standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clock_container">

            <AutoCompleteTextView
                android:id="@+id/room_selector_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:hint="@string/room_selector_text_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fields_standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input_text_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/emails_chip_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/fields_standard_margin"
            android:background="@drawable/custom_background_shape"
            android:padding="8dp"
            app:chipSpacingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input">

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button_shape"
            android:text="@string/save_new_meeting_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>